Fix too long property names on property summary

--- a/src/styles/components/_property.scss
+++ b/src/styles/components/_property.scss
@@ -48,6 +48,7 @@
 
   h3 {
     margin-bottom: 0;
+    word-wrap: break-word;
   }
 
   .dark-theme & {
